# redstone

./: Cargo.toml  README.md
crates/fs-service/: Cargo.toml
crates/language-server/: Cargo.toml
crates/language-server/src/: capabilities.rs  event_loop.rs  main.rs  utils.rs
crates/sourcegen/: Cargo.toml
crates/sourcegen/src/: ast_tokens.rs  lib.rs  recipe.rs  syntax_kind.rs  syntax_kinds.rs  utils.rs
crates/sourcegen/src/recipe/: ast_nodes.rs  syntax_kind.rs
crates/syntax/: Cargo.toml  java.ungram
crates/syntax/src/: ast.rs  cst.rs  gen.rs  lib.rs  source.rs
data/: init-params.json  rust-ungrammar.json
src/: capabilities.rs  event_loop.rs  flags.rs  handers.rs  main.rs
xtask/: Cargo.toml
xtask/src/: flags.rs  main.rs  ungrammar_json.rs
