[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ungrammar.workspace = true
xflags.workspace = true
sourcegen.workspace = true
syntax.workspace = true
write-json = "0.1.1"
