[package]
name = "redstone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xflags.workspace = true
lsp-types = "0.95.0"
lsp-server = "0.7.6"
anyhow = "1.0.79"
serde = "1.0"
serde_json = "1.0"
crossbeam-channel = "0.5.8"
